--- a/control
+++ b/control
@@ -14,3 +14,11 @@ Standards-Version: 3.9.5
 Section: libs
 
 
+Package: python-autowrap
+Architecture: all
+Depends: ${python:Depends}, ${misc:Depends}
+Suggests: python-autowrap-docs
+Description: Python autowrap (Python 2)
+ Autowrap
+ .
+ This is the Python 2 version of the package.
