--- a/control
+++ b/control
@@ -13,10 +13,9 @@ Build-Depends: debhelper (>= 9.2),
 Standards-Version: 3.9.5
 Section: libs
 
-
 Package: python-autowrap
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}
+Depends: ${python:Depends}, ${misc:Depends}, cython, libboost-dev
 Suggests: python-autowrap-docs
 Description: Python autowrap (Python 2)
  Autowrap
