--- a/control
+++ b/control
@@ -5,8 +5,10 @@ Uploaders: xxx
 Build-Depends: debhelper (>= 9.2), 
                dh-python,
                python-all (>= 2.6.6-3~),
+               python-nose,
                python-setuptools,
                python3-all, 
+               python3-nose,
                python3-setuptools,
                cython,
                libboost-dev
